syntax = "proto3";
option java_multiple_files = true;
package com.edwin.distributed.schema;

message MerkleRequest {
}

message MerkleResponse {
  message Merkle {
    string fileName = 1;
    string hash = 2;
  }
  repeated Merkle leafs = 1;
}