syntax = "proto3";
option java_multiple_files = true;
package com.edwin.distributed.schema;
import "Merkle.proto";

service MerkleTreeService {
  rpc get(MerkleRequest) returns (MerkleResponse);
}